--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <body>
       <div>
         <h4>User</h4>        
-        <li>Signup: POST {HOST_NAME}/signup</li>
+        <li>Signup: POST https://ngtodoapp.herokuapp.com/signup</li>
         <li>Login:  POST https://ngtodoapp.herokuapp.com/login</li>
         <br/></br>
         <li>Get all users:     GET https://ngtodoapp.herokuapp.com/user</li>
