--- a/index.html
+++ b/index.html
@@ -41,12 +41,14 @@
         <b>TODO schema</b>
         <pre> 
             { 
-                "id":<number>,
+                "id":&lt;number&gt;,
                 "title":"",
                 "desc":""
                 "isFavorite":true,
-                "creationTime":<number-time in millis>,
-                "lmTime":<number-time in millis></number-time>
+                "createdBy":&lt;number&gt;,
+                "lmBy":&lt;number&gt;,
+                "creationTime":&lt;number - time in millis&gt;,
+                "lmTime":&lt;number - time in millis&gt;
             } 
         </pre>
       </div>
