--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
                 <tr><td>Enable/Disable authorized access</td><td>GET</td><td>http://localhost:8080/config?auth=0</td></tr>
             -->
             
-            <tr><td>Set the Auth JWT expiry time (seconds)</td><td>GET</td><td>http://localhost:8080/config?jwt_exp=3600</td></tr>
-            <tr><td>Get Configurations</td><td>GET</td><td>http://localhost:8080/config</td></tr>
+            <tr><td>Set the Auth JWT expiry time (seconds)</td><td>GET</td><td>https://ngtodoapp.herokuapp.com/config?jwt_exp=3600</td></tr>
+            <tr><td>Get Configurations</td><td>GET</td><td>https://ngtodoapp.herokuapp.com/config</td></tr>
         </table>        
       </div>
 
