--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         <table>
             <tr><td>Get all TODOs</td><td>GET</td><td>https://ngtodoapp.herokuapp.com/todo</td></tr>
             <tr><td>Get TODO by ID</td><td>GET</td><td>https://ngtodoapp.herokuapp.com/todo/{id}</td></tr>
+            <tr><td>Add new TODO</td><td>POST</td><td>https://ngtodoapp.herokuapp.com/todo</td></tr>
             <tr><td>Update TODO</td><td>PUT</td><td>https://ngtodoapp.herokuapp.com/todo/{id}</td></tr>
             <tr><td>Delete TODO</td><td>DELETE</td><td>https://ngtodoapp.herokuapp.com/todo/{id}</td></tr>            
         </table>
